Restore uneven lines and fix spacing issues

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -33,6 +33,11 @@
     width : 100%;
 }
 
+
+.wrap_pad {
+    padding-bottom:30px;
+}
+
 #main-content {
     width: 100%;
 }
@@ -74,14 +79,12 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 #fixed-wrapper {
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 #changed-wrapper {
@@ -89,7 +92,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 #developer-wrapper {
@@ -97,7 +99,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 #html-wrapper {
@@ -105,7 +106,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 #resolved-wrapper {
@@ -113,7 +113,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 #unresolved-wrapper {
@@ -121,7 +120,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding-bottom:50px;
 }
 
 
@@ -602,7 +600,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     }
 
     #fixed-wrapper {
@@ -610,7 +607,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     }
 
     #changed-wrapper {
@@ -618,7 +614,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     }
 
     #developer-wrapper {
@@ -626,7 +621,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     }
 
     #html-wrapper {
@@ -634,7 +628,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     }
 
     #resolved-wrapper {
@@ -642,7 +635,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     }
 
     #unresolved-wrapper {
@@ -650,7 +642,6 @@ article {
     overflow: hidden;
     position: relative;
     width: @widthMobile;
-    padding-bottom:20px;
     padding-left:10px;
     }
 
